<resources>
    <string name="app_name">Uni</string>
    <string name="action_settings">Settings</string>
    <string name="subject">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="groupname">Group Name</string>
    <string name="groupID">Group ID</string>
    <string name="photosvideos">Photos/Videos</string>
    <string name="topics">Topics</string>
    <string name="discussion">Discussion</string>
    <string name="title_activity_signupscreen">Signupscreen</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_signup2">signup2</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_userlist">userlist</string>
    <string name="Login">LOG IN</string>
    <string name="title_activity_chatactivity">chatactivity</string>
    <string name="title_activity_photos">photos</string>
    <string name="title_activity_makegroup">makegroup</string>
    <string name="title_activity_discussion">discussion</string>
    <string name="title_activity_joingroup">joingroup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_join_group">joinGroup</string>
    <string name="title_activity_mainactivityfragment">mainactivityfragment</string>
    <string name="title_activity_filterpic">filterpic</string>
    <string name="title_activity_demo">demo</string>
</resources>
