<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/LightGrey"

    android:layout_width="match_parent"  android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:id="@+id/appbar2">

    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signupscreen"
        android:layout_marginTop="80dp"
        >


        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/email1"
            android:inputType="textEmailAddress"
            android:hint="@string/subject"
            android:layout_gravity="center"

            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/username1"
            android:hint="@string/username"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"

            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password1"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstname"
            android:id="@+id/firstname1"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lastname"
            android:id="@+id/lastname1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            />


    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textAlignment="center"
        android:id="@+id/signupbutton"
        android:background="@color/DarkBlue"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="signupon"/>


</RelativeLayout>